# hand_publisher

./: .travis.yml  CMakeLists.txt  README.md  hand_publisher.rosinstall  package.xml
cmake/Modules/: FindLibSerial.cmake
config/: camera_calibration.ini  camera_calibration.yaml  camera_calibration.yml  coordination.yaml  display.rviz  kinect_calibration.ini  kinect_calibration.yml
include/hand_publisher/: Coordination.h  FabricVision.h  HandPublisher.h  KinectVision.h  SerialCommunication.h
launch/: camera.launch  comms.launch  kinect_camera.launch  start.launch  system.launch  tracker.launch
scripts/: raad2015_aliases.sh
src/: Coordination.cpp  FabricVision.cpp  HandPublisher.cpp  KinectVision.cpp  SerialCommunication.cpp  coordinate_system.cpp  coordination_node.cpp  fabric_vision_node.cpp  hand_publisher.cpp  kinect_vision_node.cpp  serial_communication_node.cpp  skeleton_to_hand.cpp  tf_to_string_node.cpp
test/: test_coordination.cpp  test_hand.cpp  test_kinect.cpp  test_vision.cpp
