<?xml version="1.0"?>
<package>
  <name>hand_publisher</name>
  <version>0.0.0</version>
  <description>The hand_publisher package</description>

  <maintainer email="asynodin@mech.upatras.gr">Aris Synodinos</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>k2_client</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>k2_client</run_depend>
</package>
